  solver for the "sat" and "satx" proof methods and corresponding tactics;
  the old default can be restored using
  "declare [[sat_solver = zchaff_with_proofs]]". Minor INCOMPATIBILITY.

* SMT module:
  * A new version of the SMT module, temporarily called "SMT2", uses SMT-LIB 2
    and supports recent versions of Z3 (e.g., 4.3). The new proof method is
    called "smt2".

* Sledgehammer:
  - New prover "z3_new" with support for Isar proofs
  - MaSh overhaul:
      - New SML-based learning engines eliminate the dependency on Python
        and increase performance and reliability.
      - Activation of MaSh now works via the "MaSh" system option (without
        requiring restart), instead of former settings variable "MASH".
        The option can be edited in Isabelle/jEdit menu Plugin
        Options / Isabelle / General. Allowed values include "sml" (for the
        default SML engine), "py" (for the old Python engine), and "none".
  - New option:
      smt_proofs
  - Renamed options:
      isar_compress ~> compress_isar
      isar_try0 ~> try0_isar
    INCOMPATIBILITY.

* Metis:
  - Removed legacy proof method 'metisFT'. Use 'metis (full_types)' instead.
    INCOMPATIBILITY.

* Try0: Added 'algebra' and 'meson' to the set of proof methods.

* Command renaming: enriched_type ~> functor. INCOMPATIBILITY.

* The symbol "\<newline>" may be used within char or string literals
to represent (Char Nibble0 NibbleA), i.e. ASCII newline.

* Activation of Z3 now works via "z3_non_commercial" system option
(without requiring restart), instead of former settings variable
"Z3_NON_COMMERCIAL".  The option can be edited in Isabelle/jEdit menu
Plugin Options / Isabelle / General.

* "declare [[code abort: ...]]" replaces "code_abort ...".
INCOMPATIBILITY.

* "declare [[code drop: ...]]" drops all code equations associated
with the given constants.

* Abolished slightly odd global lattice interpretation for min/max.

Fact consolidations:
    min_max.inf_assoc ~> min.assoc